--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: aspectImportance
 Title: Instance-level explainer for the groups of features
 Version: 0.1.0
 Authors@R:
-    c(person("Katarzyna", "Pekala", role = c("aut", "cre")),
-      person("Przemyslaw", "Biecek", role = c("aut"), 
-             comment = c(ORCID = "0000-0001-8423-1823")))
+    c(person("Katarzyna", "Pekala", email = "katarzyna.pekala@gmail.com", 
+    role = c("aut", "cre")), person("Przemyslaw", "Biecek", role = c("aut"), 
+    comment = c(ORCID = "0000-0001-8423-1823")))
 Description: Aspect importance’s aim is to increase the interpretability of the 
     black box model by providing instance-level explainer for the groups of 
     explanatory variables. It enables grouping predictors into entities called 
@@ -17,12 +17,14 @@ LazyData: true
 RoxygenNote: 7.1.0
 Imports: 
   ggplot2,
+  DALEX (>= 1.0),
   glmnet,
   ggdendro,
-  gridExtra
+  gridExtra,
+  ingredients
 Suggests:
-  DALEX (>= 1.0),
   testthat,
+  knitr,
   randomForest
 URL: https://github.com/kasiapekala/aspectImportance
 BugReports: https://github.com/kasiapekala/aspectImportance/issues
