--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,5 +3,6 @@ pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   vignette_aspect_importance: vignette_aspect_importance.html
-last_built: 2020-04-15T14:24Z
+  vignette_aspect_importance_description: vignette_aspect_importance_description.html
+last_built: 2020-04-16T09:00Z
 
