modified triplot to use both: aspect and feature importance

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(ggplot2,.pt)
 importFrom(glmnet,glmnet)
 importFrom(graphics,plot)
 importFrom(gridExtra,grid.arrange)
+importFrom(ingredients,feature_importance)
 importFrom(stats,coef)
 importFrom(stats,cor)
 importFrom(stats,cutree)
