--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: aspectImportance
+Package: triplot
 Title: Instance-level explainer for the groups of features
 Version: 0.1.0
 Authors@R:
@@ -28,6 +28,6 @@ Suggests:
     randomForest,
     mlbench,
     covr
-URL: https://github.com/kasiapekala/aspectImportance
-BugReports: https://github.com/kasiapekala/aspectImportance/issues
+URL: https://github.com/kasiapekala/triplot
+BugReports: https://github.com/kasiapekala/triplot/issues
 VignetteBuilder: knitr
