updated plot_aspects_importance_grouping so it can draw last clusters connection

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(glmnet,glmnet)
 importFrom(graphics,plot)
 importFrom(gridExtra,grid.arrange)
 importFrom(ingredients,feature_importance)
+importFrom(ingredients,select_sample)
 importFrom(stats,coef)
 importFrom(stats,cor)
 importFrom(stats,cutree)
