--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,10 +18,10 @@ RoxygenNote: 7.1.0
 Imports: 
   ggplot2,
   DALEX (>= 1.0),
+  ingredients,   
   glmnet,
   ggdendro,
-  gridExtra,
-  ingredients
+  gridExtra
 Suggests:
     testthat,
     knitr,
