added new alias for aspec_importance

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(group_variables)
 export(lime)
 export(plot_aspects_importance_grouping)
 export(plot_group_variables)
+export(prediction_aspect)
 export(triplot)
 import(ggplot2)
 import(stats)
