restructured group_variables and triplot objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,16 +4,20 @@ S3method(aspect_importance,default)
 S3method(aspect_importance,explainer)
 S3method(aspect_importance_single,default)
 S3method(aspect_importance_single,explainer)
+S3method(cluster_variables,default)
 S3method(plot,aspect_importance)
+S3method(plot,cluster_variables)
+S3method(plot,triplot)
 S3method(triplot,default)
 S3method(triplot,explainer)
 export(aspect_importance)
 export(aspect_importance_single)
+export(cluster_variables)
 export(get_sample)
 export(group_variables)
 export(lime)
+export(list_variables)
 export(plot_aspects_importance_grouping)
-export(plot_group_variables)
 export(prediction_aspect)
 export(triplot)
 import(ggplot2)
