--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(aspect_importance_single,explainer)
 S3method(cluster_variables,default)
 S3method(plot,aspect_importance)
 S3method(plot,cluster_variables)
+S3method(plot,hierarchical_importance)
 S3method(plot,triplot)
 S3method(triplot,default)
 S3method(triplot,explainer)
@@ -15,9 +16,9 @@ export(aspect_importance_single)
 export(cluster_variables)
 export(get_sample)
 export(group_variables)
+export(hierarchical_importance)
 export(lime)
 export(list_variables)
-export(plot_aspects_importance_grouping)
 export(prediction_aspect)
 export(triplot)
 import(ggplot2)
