changed triplot() to calculate_triplot()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,16 @@ S3method(aspect_importance,default)
 S3method(aspect_importance,explainer)
 S3method(aspect_importance_single,default)
 S3method(aspect_importance_single,explainer)
+S3method(calculate_triplot,default)
+S3method(calculate_triplot,explainer)
 S3method(cluster_variables,default)
 S3method(plot,aspect_importance)
 S3method(plot,cluster_variables)
 S3method(plot,hierarchical_importance)
 S3method(plot,triplot)
-S3method(triplot,default)
-S3method(triplot,explainer)
 export(aspect_importance)
 export(aspect_importance_single)
+export(calculate_triplot)
 export(cluster_variables)
 export(get_sample)
 export(group_variables)
@@ -20,7 +21,6 @@ export(hierarchical_importance)
 export(lime)
 export(list_variables)
 export(prediction_aspect)
-export(triplot)
 import(ggplot2)
 import(stats)
 importFrom(DALEX,theme_drwhy)
