added explainers to examples and modified some tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,7 @@ export(group_variables)
 export(hierarchical_importance)
 export(lime)
 export(list_variables)
-export(prediction_aspect)
+export(predict_aspects)
 import(ggplot2)
 import(stats)
 importFrom(DALEX,theme_drwhy)
