added parameter "type" to triplot&co, added aliases to triplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,9 @@ export(group_variables)
 export(hierarchical_importance)
 export(lime)
 export(list_variables)
+export(model_triplot)
 export(predict_aspects)
+export(predict_triplot)
 import(ggplot2)
 import(stats)
 importFrom(DALEX,theme_drwhy)
