added print for aspect_importance and triplot objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ S3method(plot,aspect_importance)
 S3method(plot,cluster_variables)
 S3method(plot,hierarchical_importance)
 S3method(plot,triplot)
+S3method(print,aspect_importance)
+S3method(print,triplot)
 export(aspect_importance)
 export(aspect_importance_single)
 export(calculate_triplot)
@@ -23,6 +25,7 @@ export(list_variables)
 export(model_triplot)
 export(predict_aspects)
 export(predict_triplot)
+export(print)
 import(ggplot2)
 import(stats)
 importFrom(DALEX,theme_drwhy)
