--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,9 +26,8 @@ Suggests:
     testthat,
     knitr,
     randomForest,
-    mlbench,
     covr
-URL: https://github.com/kasiapekala/triplot
-BugReports: https://github.com/kasiapekala/triplot/issues
+URL: https://github.com/ModelOriented/triplot
+BugReports: https://github.com/ModelOriented/triplot/issues
 VignetteBuilder: knitr
 Language: en-US
