--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,5 +4,6 @@ pkgdown_sha: ~
 articles:
   vignette_aspect_importance: vignette_aspect_importance.html
   vignette_aspect_importance_description: vignette_aspect_importance_description.html
-last_built: 2020-05-06T09:36Z
+  vignette_aspect_importance_fifa: vignette_aspect_importance_fifa.html
+last_built: 2020-05-06T15:11Z
 
