--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -1,11 +1,15 @@
 on:
   push:
-    branches: master
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
-name: pkgdown
+name: test-coverage
 
 jobs:
-  pkgdown:
+  test-coverage:
     runs-on: macOS-latest
     steps:
       - uses: actions/checkout@v2
@@ -25,19 +29,15 @@ jobs:
         with:
           path: ${{ env.R_LIBS_USER }}
           key: macOS-r-4.0-1-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: macOS-r-4.0-1-
+          restore-keys:  macOS-r-4.0-1-
 
       - name: Install dependencies
         run: |
-          install.packages("remotes")
+          install.packages(c("remotes"))
           remotes::install_deps(dependencies = TRUE)
-          remotes::install_dev("pkgdown")
-          remotes::install_github("ModelOriented/DrWhyTemplate")
+          remotes::install_cran("covr")
         shell: Rscript {0}
 
-      - name: Install package
-        run: R CMD INSTALL .
-
-      - name: Deploy package
-        run: pkgdown::deploy_to_branch(new_process = FALSE, examples = FALSE, clean = TRUE)
+      - name: Test coverage
+        run: covr::codecov()
         shell: Rscript {0}
