--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -1,15 +1,11 @@
 on:
   push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+    branches: master
 
-name: test-coverage
+name: pkgdown
 
 jobs:
-  test-coverage:
+  pkgdown:
     runs-on: macOS-latest
     steps:
       - uses: actions/checkout@v2
@@ -29,15 +25,19 @@ jobs:
         with:
           path: ${{ env.R_LIBS_USER }}
           key: macOS-r-4.0-1-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys:  macOS-r-4.0-1-
+          restore-keys: macOS-r-4.0-1-
 
       - name: Install dependencies
         run: |
-          install.packages(c("remotes"))
+          install.packages("remotes")
           remotes::install_deps(dependencies = TRUE)
-          remotes::install_cran("covr")
+          remotes::install_dev("pkgdown")
+          remotes::install_github("ModelOriented/DrWhyTemplate")
         shell: Rscript {0}
 
-      - name: Test coverage
-        run: covr::codecov()
+      - name: Install package
+        run: R CMD INSTALL .
+
+      - name: Deploy package
+        run: pkgdown::deploy_to_branch(new_process = FALSE, examples = FALSE, clean = TRUE)
         shell: Rscript {0}
