--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,8 @@ Suggests:
     randomForest,
     mlbench,
     ranger,
+    gbm, 
+    rms,
     covr
 URL: https://github.com/ModelOriented/triplot
 BugReports: https://github.com/ModelOriented/triplot/issues
