switched gridExtra to patchwork and made changes plot.triplot()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(model_triplot)
 export(predict_aspects)
 export(predict_triplot)
 import(ggplot2)
+import(patchwork)
 import(stats)
 importFrom(DALEX,theme_drwhy)
 importFrom(DALEX,theme_drwhy_vertical)
@@ -35,7 +36,6 @@ importFrom(ggdendro,segment)
 importFrom(ggplot2,.pt)
 importFrom(glmnet,glmnet)
 importFrom(graphics,plot)
-importFrom(gridExtra,grid.arrange)
 importFrom(ingredients,feature_importance)
 importFrom(ingredients,select_sample)
 importFrom(stats,coef)
