removed dependency from ingredients, changed calculate_triplot params

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,8 @@ export(predict_triplot)
 import(ggplot2)
 import(patchwork)
 import(stats)
+importFrom(DALEX,explain)
+importFrom(DALEX,feature_importance)
 importFrom(DALEX,theme_drwhy)
 importFrom(DALEX,theme_drwhy_vertical)
 importFrom(ggdendro,dendro_data)
@@ -36,8 +38,6 @@ importFrom(ggdendro,segment)
 importFrom(ggplot2,.pt)
 importFrom(glmnet,glmnet)
 importFrom(graphics,plot)
-importFrom(ingredients,feature_importance)
-importFrom(ingredients,select_sample)
 importFrom(stats,coef)
 importFrom(stats,cor)
 importFrom(stats,cutree)
