--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -5,5 +5,6 @@ articles:
   vignette_aspect_importance: vignette_aspect_importance.html
   vignette_aspect_importance_description: vignette_aspect_importance_description.html
   vignette_aspect_importance_fifa: vignette_aspect_importance_fifa.html
-last_built: 2020-05-14T11:07Z
+  vignette_aspect_importance_fifa_mln: vignette_aspect_importance_fifa_mln.html
+last_built: 2020-05-20T10:49Z
 
