changed colors in predict_aspects and added model_aspects alias

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,12 +22,14 @@ export(group_variables)
 export(hierarchical_importance)
 export(lime)
 export(list_variables)
+export(model_aspects)
 export(model_triplot)
 export(predict_aspects)
 export(predict_triplot)
 import(ggplot2)
 import(patchwork)
 import(stats)
+importFrom(DALEX,colors_discrete_drwhy)
 importFrom(DALEX,explain)
 importFrom(DALEX,feature_importance)
 importFrom(DALEX,theme_drwhy)
