--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,6 @@
-pandoc: 2.7.2
+pandoc: 2.7.3
 pkgdown: 1.5.1
 pkgdown_sha: ~
-articles:
-  vignette_aspect_importance: vignette_aspect_importance.html
-  vignette_aspect_importance_description: vignette_aspect_importance_description.html
-  vignette_aspect_importance_fifa: vignette_aspect_importance_fifa.html
-last_built: 2020-05-20T12:19Z
+articles: []
+last_built: 2020-06-04T13:06Z
 
