--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -31,6 +31,7 @@ jobs:
         run: |
           install.packages("remotes")
           remotes::install_deps(dependencies = TRUE)
+          install.packages(c("rms", "gbm", "ranger"))
           remotes::install_dev("pkgdown")
           remotes::install_github("ModelOriented/DrWhyTemplate")
         shell: Rscript {0}
